added product price columns and updated database

--- a/SKUPromotions.csproj
+++ b/SKUPromotions.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\202007301338396_SKU2.designer.cs">
       <DependentUpon>202007301338396_SKU2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007301541088_SKU21.cs" />
+    <Compile Include="Migrations\202007301541088_SKU21.designer.cs">
+      <DependentUpon>202007301541088_SKU21.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -80,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007301338396_SKU2.resx">
       <DependentUpon>202007301338396_SKU2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007301541088_SKU21.resx">
+      <DependentUpon>202007301541088_SKU21.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
