added code to print the sum
added code to print the sum

--- a/SKUPromotions.csproj
+++ b/SKUPromotions.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BusinessLogic\ProcessPromotion.cs" />
     <Compile Include="DataAccess\AppDBContext.cs" />
     <Compile Include="DataAccess\DataAccessService.cs" />
+    <Compile Include="DataAccess\IDataAccessService.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\ProductsInputEntity.cs" />
     <Compile Include="Entities\PromotionEntity.cs" />
